@@ -1,3 +1,10 @@
+2013-01-23  Georg-Johann Lay  <avr@gjlay.de>
+
+	PR target/54222
+	* config/avr/stdfix.h: New file.
+	* t-avr (stdfix-gcc.h): New rule to build it.
+	(EXTRA_HEADERS): Set it to install stdfix.h, stdfix-gcc.h.
+
 2013-01-23  Kostya Serebryany  <kcc@google.com>
 
 	* config/darwin.h: remove dependency on CoreFoundation (asan on Mac OS).
